@@ -1,0 +1,10 @@
+<div .span9 .hero-unit>
+  <h2>
+    Disconnecting from Jabber
+  <p>
+    This won't delete the repository or repositories at the other end
+    of the Jabber connection, but it will disconnect from them, and stop
+    using Jabber.
+  <p>
+   <a .btn .btn-primary href="@{DisconnectXMPPR}">
+     <i .icon-minus></i> Disconnect
